# Tsundoku

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  Dockerfile  LICENSE.md  README.md  compose.yml  config.ini  config.ini.example  config.py  create_db.sql  crowdin.yml  deluge.py  docker-compose.yml  exceptions.py  feed_poller.py  install.py  justfile  logo.psd  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  tsconfig.json  tusker.toml  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js  yoyo.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  code-quality.yml  cut-release.yml  main.yml
default_parsers/: _example.py  nyaa.py  subsplease.py
default_sources/: nyaa.json  subsplease.json  tokyotosho.json
deluge/: main.py
docs/: CNAME  apiresponse.rst  components.json  conf.py  entries.rst  index.html  index.rst  openapi.json  shows.rst  showwebhooks.rst  webhooks.rst
docs/apis/all_entries/: by_id.json
docs/apis/entries/: all.json  by_id.json
docs/apis/nyaa/: general.json
docs/apis/seen_releases/: distinct.json  filter.json
docs/apis/shows/: all.json  by_id.json  check.json  delete_cache.json
docs/apis/webhookbase/: all.json  by_id.json  validity.json
docs/apis/webhookshow/: all.json  by_id.json
feeds/: downloader.py  exceptions.py  poller.py
l10n/: WebpackFluentPlugin.js  en.ftl  ja.ftl  ru.ftl
l10n/en/: base.ftl  cmdline.ftl  config.ftl  errors.ftl  index.ftl  login.ftl  logs.ftl  nyaa_search.ftl  register.ftl  webhooks.ftl
l10n/ru/: base.ftl  cmdline.ftl  errors.ftl  index.ftl  login.ftl  nyaa_search.ftl  webhooks.ftl
migrations/: 0001_initial.sql  0002_smallserial.sql  0003_webhooks.sql  0004_kitsu.sql  0005_webhookbase.sql  0006_wh_base_name.sql  0007_update_webhook_default.sql  0008_oto_webhook.sql  0009_serial_ids.sql  0010_fix_ints.sql  0011_null_last_updated.sql  0012_api_key.sql  0013_entry_last_update.sql  0014_encode.sql  0015_initial.sql  0016_encode_config.sql  0017_show_watch.sql  0018_timed_encoding.sql  0019_new_config.sql  0020_defaults.sql  0021_show_post_process.sql  0022_transmissionbt.sql  0023_seed_ratio.sql  0024_entrystate_failed.sql  0025_webhook_default_triggers.sql  0026_entry_version.sql  0027_show_resolution_release_group.sql  0028_encode_drop_retry.sql  0029_seen_releases.sql  0030_readonly_user.sql  0031_encode_minimum_file_size.sql  0032_new_encode_table.sql  0033_encode_encoder.sql  0034_libraries.py  0035_show_library_id.sql  0036_change_default_host_bind.sql  0037_drop_post_processing.sql
parsers/: _example.py  erairaws.py  horriblesubs.py  nesubs.py  nyaa.py  subsplease.py
tests/: conftest.py  test_anitopy_results.py  test_config.py  test_database.py  test_downloader.py  test_library.py  test_parse_results.py  test_poller.py  test_utils.py
tests/mock/: __init__.py  _data.sql  _rss_item_titles.txt  app.py  dl_client.py  filesystem.py  rss_feed.py  sources.py
tests/web/: test_api.py  test_register.py
tsundoku/: __init__.py  __main__.py  app.py  asqlite.py  auth.py  config.py  constants.py  database.py  decorators.py  exceptions.py  flags.py  fluent.py  git.py  log.py  model.py  parsers.py  ratelimit.py  requirements-dev.txt  responses.py  sources.py  templating.py  urls.py  user.py  utils.py
tsundoku/blueprints/: __init__.py
tsundoku/deluge/: __init__.py  exceptions.py  main.py
tsundoku/dl_client/: __init__.py  abstract.py  client.py  errors.py
tsundoku/feeds/: __init__.py  downloader.py  encoder.py  entry.py  fuzzy.py  poller.py
tsundoku/kitsu/: __init__.py  manager.py
tsundoku/manager/: __init__.py  entry.py  kitsu.py  library.py  seen_release.py  show.py  show_collection.py
tsundoku/nyaa/: __init__.py  searcher.py
tsundoku/webhooks/: __init__.py  webhook.py
(+148 files in other folders)
