[project]
name = "tsundoku"
version = "1.0.10"
description = "An all-in-one utility to download, rename, and move anime from RSS feeds."
readme = "README.md"
requires-python = "==3.11.*"
authors = [
  {name = "Tyler Gibbs", email = "gibbstyler7@gmail.com"}
]
license-files = ["LICENSE.md"]
dependencies = [
    "anitomy-ng==1.0.6",
    "apscheduler==3.10.4",
    "argon2-cffi==25.1.0",
    "aiofiles==24.1.0",
    "aiohttp==3.14.1",
    "bencodepy==0.9.5",
    "distro==1.9.0",
    "feedparser==6.0.11",
    "fluent.runtime==0.4.0",
    "user-agents==2.2.0",
    "quart-auth==0.8.0",
    "quart-rate-limiter==0.9.0",
    "quart==0.20.0",
    "typing-extensions==4.14.1",
    "yoyo-migrations==9.0.0"
]

[project.optional-dependencies]
dev = [
    "python-dotenv==1.2.2",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "ruff==0.15.20",
    "ty==0.0.56",
]

[tool.ruff.lint]
extend-select = [
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "COM818", # trailing comma on bare tuples
    "E",      # pycodestyle error
    "ERA",    # eradicate
    "FAST",   # fastapi
    "I",      # isort
    "N",      # pep8-naming
    "PT",     # flake8-pytest-style
    "PTH",    # use pathlib
    "RET",    # flake8-return
    "RUF",    # ruff-specific rules
    "TRY004", # typeerror for type exceptions
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
]
# Kept off: as of ruff 0.15, preview=true + extend-select (rather than select)
# pulls in whole extra rule categories (BLE, DTZ, PYI, SIM, etc.) beyond the
# ones listed above, not just preview-status rules within them.
preview = false

[tool.ruff.lint.per-file-ignores]
"*" = ["ANN401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff]
line-length = 1024

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
